# low-power

./: Cargo.toml  memory.x  rust-toolchain.toml
.cargo/: config.toml
src/: main.rs  rtc.rs
